fix: use v5.13.0 links

--- a/docs/how-to-guides/scaffolding/full-stack-application.mdx
+++ b/docs/how-to-guides/scaffolding/full-stack-application.mdx
@@ -93,41 +93,41 @@ The following is brief overview of the essential files and folders that are crea
 
 #### GraphQL API
 
-##### [`api`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template)
+##### [`api`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template)
 
 The project application folder that holds the newly created React application.
 
-##### [`api/code/graphql/src/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src)
+##### [`api/code/graphql/src/`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src)
 
 Contains the GraphQL API application code. This is where you'll be defining the GraphQL schema, resolver functions, business logic, authentication / authorization logic, writing tests, and potentially more.
 
-##### [`api/code/graphql/src/plugins`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/plugins)
+##### [`api/code/graphql/src/plugins`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/plugins)
 
 This is where you'll be creating plugins, either manually or via other scaffolding utilities, for example via the [Extend GraphQL API](/docs/how-to-guides/scaffolding/extend-graphql-api) scaffold.
 
 :::tip
-Do have in mind that every plugin (or a collection of plugins) you create also needs be imported and registered in the [`api/code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/index.ts#L11) entrypoint file.
+Do have in mind that every plugin (or a collection of plugins) you create also needs be imported and registered in the [`api/code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/index.ts#L11) entrypoint file.
 :::
 
-##### [`api/pulumi`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi)
+##### [`api/pulumi`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi)
 
-This is the folder that contains all of the GraphQL API's cloud infrastructure code. In it, we have the [`dev`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev) and [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folders, which represent the cloud infrastructure resources that will be deployed into development and production environments, respectively.
+This is the folder that contains all of the GraphQL API's cloud infrastructure code. In it, we have the [`dev`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev) and [`prod`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folders, which represent the cloud infrastructure resources that will be deployed into development and production environments, respectively.
 
 #### React Application
 
-#### [`app`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template)
+#### [`app`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-react-app/template)
 
 The project application folder that holds the newly created React application.
 
-##### [`app/code/src/`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src)
+##### [`app/code/src/`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/src)
 
 Contains the React application code. This is where you'll be creating your application's pages, shared React components, defining routes, styles, and more.
 
-##### [`app/code/src/plugins`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/plugins)
+##### [`app/code/src/plugins`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/src/plugins)
 
-Contains plugins, like [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins that define application routes or [`ApolloLinkPlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/ApolloLinkPlugin.ts#L8) plugins that define Apollo links.
+Contains plugins, like [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins that define application routes or [`ApolloLinkPlugin`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/app/src/plugins/ApolloLinkPlugin.ts#L8) plugins that define Apollo links.
 
-##### [`app/pulumi/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/pulumi)
+##### [`app/pulumi/`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-react-app/template/pulumi)
 
 This is the folder that contains all of the React application's cloud infrastructure code.
 
