--- a/docs/how-to-guides/scaffolding/graphql-api.mdx
+++ b/docs/how-to-guides/scaffolding/graphql-api.mdx
@@ -94,35 +94,35 @@ The following are the most essential files and folders that are created during t
 The path in which the new GraphQL API and all of its files and folders are created is specified in the scaffold's wizard.
 :::
 
-#### [`code/graphql/src/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src)
+#### [`code/graphql/src/`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src)
 
 Contains the GraphQL API application code. This is where you'll be defining the GraphQL schema, resolver functions, business logic, authentication / authorization logic, writing tests, and potentially more.
 
-#### [`code/graphql/src/types.ts`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/types.ts)
+#### [`code/graphql/src/types.ts`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/types.ts)
 
 Contains global type definitions, that can be imported in different places in your application code.
 
-Once created, the file only exports the [`Context`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/types.ts#L9) interface, which defines the `context` object that you will often be using while creating GraphQL resolver functions. If you will be extending the `context` object, for example via custom [`ContextPlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/handler/src/plugins/ContextPlugin.ts#L7) plugins, an update to this interface should be made as well. By doing this, you and your team will benefit from improved type-safety and easier discovery process.
+Once created, the file only exports the [`Context`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/types.ts#L9) interface, which defines the `context` object that you will often be using while creating GraphQL resolver functions. If you will be extending the `context` object, for example via custom [`ContextPlugin`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/handler/src/plugins/ContextPlugin.ts#L7) plugins, an update to this interface should be made as well. By doing this, you and your team will benefit from improved type-safety and easier discovery process.
 
-#### [`code/graphql/src/plugins`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/plugins)
+#### [`code/graphql/src/plugins`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/plugins)
 
 This is where you'll be creating plugins, either manually or via other scaffolding utilities, for example via the [Extend GraphQL API](/docs/how-to-guides/scaffolding/extend-graphql-api) scaffold.
 
 :::tip
-Do have in mind that every plugin (or a collection of plugins) you create also needs be imported and registered in the [`code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/index.ts#L11) entrypoint file.
+Do have in mind that every plugin (or a collection of plugins) you create also needs be imported and registered in the [`code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/src/index.ts#L11) entrypoint file.
 :::
 
-#### [`code/graphql/jest.config.js`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/jest.config.js)
+#### [`code/graphql/jest.config.js`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/jest.config.js)
 
 The config for the [Jest](/docs/key-topics/tools-libraries#testing) testing framework. Feel free to adjust it to your needs.
 
-#### [`code/graphql/.babelrc.js`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/.babelrc.js)
+#### [`code/graphql/.babelrc.js`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/.babelrc.js)
 
 The config for the [Babel](/docs/key-topics/tools-libraries#building-code) JavaScript compiler. Feel free to adjust it to your needs.
 
-#### [`code/graphql/package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/package.json)
+#### [`code/graphql/package.json`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/package.json)
 
-In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. And this is the reason why the [`code/graphql/package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/package.json) manifest file exists. It exists because the `code/graphql` folder represents a monorepo [workspace](https://classic.yarnpkg.com/en/docs/workspaces/).
+In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. And this is the reason why the [`code/graphql/package.json`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/package.json) manifest file exists. It exists because the `code/graphql` folder represents a monorepo [workspace](https://classic.yarnpkg.com/en/docs/workspaces/).
 
 In most cases, this file will only be modified when new NPM packages are added.
 
@@ -130,13 +130,13 @@ In most cases, this file will only be modified when new NPM packages are added.
 Learn more about the monorepo organization in the [Monorepo Organization](/docs/key-topics/project-organization/monorepo-organization) key topic.
 :::
 
-#### [`pulumi/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi)
+#### [`pulumi/`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi)
 
-This is the folder that contains all of the cloud infrastructure code. In it, we have the [`dev`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev) and [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folders, which represent the cloud infrastructure resources that will be deployed into development and production environments, respectively.
+This is the folder that contains all of the cloud infrastructure code. In it, we have the [`dev`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev) and [`prod`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folders, which represent the cloud infrastructure resources that will be deployed into development and production environments, respectively.
 
-If we were to compare the two, we'd find that the code located in the [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folder also deploys a new [Amazon Virtual Private Cloud (VPC)](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod/vpc.ts#L3) and that the single AWS Lambda function is [deployed into it](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod/graphql.ts#L87). Down the line, doing this for cloud infrastructure resources can improve our GraphQL API's overall security posture.
+If we were to compare the two, we'd find that the code located in the [`prod`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folder also deploys a new [Amazon Virtual Private Cloud (VPC)](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod/vpc.ts#L3) and that the single AWS Lambda function is [deployed into it](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod/graphql.ts#L87). Down the line, doing this for cloud infrastructure resources can improve our GraphQL API's overall security posture.
 
-Note that, by default, the cloud infrastructure code in the [`prod`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folder will only be used when deploying into the `prod` (production) environment. If you maybe wish to deploy the same into another environment, for example `staging`, you can set this in the [`pulumi/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/index.ts#L8) entrypoint file.
+Note that, by default, the cloud infrastructure code in the [`prod`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod) folder will only be used when deploying into the `prod` (production) environment. If you maybe wish to deploy the same into another environment, for example `staging`, you can set this in the [`pulumi/index.ts`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi/index.ts#L8) entrypoint file.
 
 :::info
 Learn more about Pulumi, the default infrastructure-as-code (IaC) framework Webiny relies on, in the [Infrastructure as code with Pulumi](/docs/key-topics/deployment/iac-with-pulumi) key topic.
@@ -187,7 +187,7 @@ On the other hand, a much faster way of extending the GraphQL API would be to us
 
 In order to interact with the deployed Amazon DynamoDB table, you can use any library, for example the official [DynamoDB Document Client](https://docs.aws.amazon.com/sdk-for-javascript/v2/developer-guide/dynamodb-example-document-client.html) or maybe even [DynamoDB Toolbox](https://github.com/jeremydaly/dynamodb-toolbox).
 
-Note that, when setting up your database client, the deployed table's Amazon resource name ([ARN](https://docs.aws.amazon.com/general/latest/gr/aws-arns-and-namespaces.html)) can be read via the `DB_TABLE` environment variable, which is defined via the created [cloud infrastructure code](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev/index.ts#L22).
+Note that, when setting up your database client, the deployed table's Amazon resource name ([ARN](https://docs.aws.amazon.com/general/latest/gr/aws-arns-and-namespaces.html)) can be read via the `DB_TABLE` environment variable, which is defined via the created [cloud infrastructure code](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev/index.ts#L22).
 
 :::info
 By default, the [Extend GraphQL API](/docs/how-to-guides/scaffolding/extend-graphql-api) scaffold relies on [DynamoDB Toolbox](https://github.com/jeremydaly/dynamodb-toolbox) for all Amazon DynamoDB interactions.
@@ -219,7 +219,7 @@ You certainly can. You can also add new commands, if need be.
 
 #### How can I add new libraries to the created React application?
 
-In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. This is the reason why the [`code/graphql/package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/package.json) manifest file exists. It exists because the `code/graphql` folder represents a monorepo [workspace](https://classic.yarnpkg.com/en/docs/workspaces/).
+In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. This is the reason why the [`code/graphql/package.json`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/code/graphql/package.json) manifest file exists. It exists because the `code/graphql` folder represents a monorepo [workspace](https://classic.yarnpkg.com/en/docs/workspaces/).
 
 This is also the reason why we can't just run `yarn add xyz` from our project root. We need to specify to which monorepo workspace the new library needs to be added, which can be done via the [`yarn workspace {workspace-name} add {library-name}`](https://classic.yarnpkg.com/en/docs/cli/workspace/) command.
 
@@ -233,9 +233,9 @@ Note that the name of the workspace is defined in the workspace's `package.json`
 
 #### I want to use a different database, how do I set it up?
 
-First of all, it's recommended you [remove the Amazon DynamoDB table](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev/index.ts#L16) that is already defined. After that, you should consult the [Pulumi documentation](https://www.pulumi.com/docs/) to see what are all of the available options and how your database can be defined in the existing cloud infrastructure code.
+First of all, it's recommended you [remove the Amazon DynamoDB table](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev/index.ts#L16) that is already defined. After that, you should consult the [Pulumi documentation](https://www.pulumi.com/docs/) to see what are all of the available options and how your database can be defined in the existing cloud infrastructure code.
 
-Once that's in place, most probably, you will need to pass some sort of a connection string to the GraphQL Handler AWS Lambda <diagram-letter>C</diagram-letter> function. You can do that via environment variables, which can be set via the cloud infrastructure code in [`pulumi/dev/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev/index.ts#L22) and [`pulumi/prod/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod/index.ts#L22).
+Once that's in place, most probably, you will need to pass some sort of a connection string to the GraphQL Handler AWS Lambda <diagram-letter>C</diagram-letter> function. You can do that via environment variables, which can be set via the cloud infrastructure code in [`pulumi/dev/index.ts`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi/dev/index.ts#L22) and [`pulumi/prod/index.ts`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-graphql-api/template/pulumi/prod/index.ts#L22).
 
 Finally, in your application code, make sure the values from set environment variables are correctly passed to your database client.
 
