--- a/docs/how-to-guides/scaffolding/react-application.mdx
+++ b/docs/how-to-guides/scaffolding/react-application.mdx
@@ -103,29 +103,29 @@ The following are the most essential files and folders that are created during t
 The path in which the new React application and all of its files and folders are created is specified in the scaffold's wizard.
 :::
 
-#### [`code/src/`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src)
+#### [`code/src/`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/src)
 
 Contains the React application code. This is where you'll be creating your application's pages, shared React components, defining routes, styles, and more.
 
-#### [`code/src/components`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/components)
+#### [`code/src/components`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/src/components)
 
 Contains React components that can be shared between multiple pages, for example, a global application layout.
 
-#### [`code/src/images`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/images)
+#### [`code/src/images`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/src/images)
 
 Contains images that can be imported either from your React component or from SCSS files.
 
-#### [`code/src/plugins`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/plugins)
+#### [`code/src/plugins`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/src/plugins)
 
-Contains plugins, like [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins that define application routes or [`ApolloLinkPlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/ApolloLinkPlugin.ts#L8) plugins that define Apollo links.
+Contains plugins, like [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins that define application routes or [`ApolloLinkPlugin`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/app/src/plugins/ApolloLinkPlugin.ts#L8) plugins that define Apollo links.
 
-#### [`code/src/styles`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/styles)
+#### [`code/src/styles`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/src/styles)
 
 Contains SCSS files that define styles used by your application. And although, out of the box, this is the only way to define styles, if you maybe prefer a CSS-in-JS solution, you're always free to add additional libraries.
 
-#### [`code/package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/package.json)
+#### [`code/package.json`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/package.json)
 
-In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. This is the reason why the [`package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/package.json) manifest file exists. It exists because the `code` folder represents a monorepo [workspace](https://classic.yarnpkg.com/en/docs/workspaces/).
+In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. This is the reason why the [`package.json`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/package.json) manifest file exists. It exists because the `code` folder represents a monorepo [workspace](https://classic.yarnpkg.com/en/docs/workspaces/).
 
 In most cases, this file will only be modified when new NPM packages are added.
 
@@ -133,7 +133,7 @@ In most cases, this file will only be modified when new NPM packages are added.
 Learn more about the monorepo organization in the [Monorepo Organization](/docs/key-topics/project-organization/monorepo-organization) key topic.
 :::
 
-#### [`pulumi/`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/pulumi)
+#### [`pulumi/`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cli-plugin-scaffold-react-app/template/pulumi)
 
 This is the folder that contains all of the cloud infrastructure code. You're free to modify in any way needed.
 
@@ -167,7 +167,7 @@ Except starting a local development server and making your React application loc
 
 ### Creating First Pages
 
-Once you've completed the scaffold's wizard and the files have been created, the first steps would be to start creating new pages, in the similar fashion it's already done with the existing example pages. Simply create a new [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins inside of the [`code/src/plugins`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/plugins) folder, and start creating your page within it, for example:
+Once you've completed the scaffold's wizard and the files have been created, the first steps would be to start creating new pages, in the similar fashion it's already done with the existing example pages. Simply create a new [`RoutePlugin`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/app/src/plugins/RoutePlugin.tsx#L8) plugins inside of the [`code/src/plugins`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/src/plugins) folder, and start creating your page within it, for example:
 
 ```tsx title="code/src/plugins/routes/myNewPage.tsx"
 import React from "react";
@@ -194,7 +194,7 @@ export default new RoutePlugin({
 });
 ```
 
-Furthermore, every application has one or more layouts, so you can also start editing the [`code/src/components/Layout.tsx`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/components/Layout.tsx). Feel free to remove anything that's not needed. The styles for the layout can be found in the [`code/src/styles/global.scss`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/styles/global.scss#L33) file.
+Furthermore, every application has one or more layouts, so you can also start editing the [`code/src/components/Layout.tsx`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/src/components/Layout.tsx). Feel free to remove anything that's not needed. The styles for the layout can be found in the [`code/src/styles/global.scss`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/src/styles/global.scss#L33) file.
 
 ### Linking the React Application With a GraphQL API
 
@@ -202,11 +202,11 @@ Out of the box, the new React application scaffold also includes the [Apollo Gra
 
 But, unless the new React application was created with the [New Full-Stack Application](/docs/how-to-guides/scaffolding/full-stack-application) scaffold, you will have to manually link your React application with an existing GraphQL API.
 
-For example, let's say our application needs to interact with the main GraphQL API that's, by default, set up with every Webiny project and is deployed as part of the **API** project application, located within the [`api`](https://github.com/webiny/webiny-js/tree/cli-scaffold-react-app/packages/cwp-template-aws/template/api) folder.
+For example, let's say our application needs to interact with the main GraphQL API that's, by default, set up with every Webiny project and is deployed as part of the **API** project application, located within the [`api`](https://github.com/webiny/webiny-js/tree/v5.13.0/packages/cwp-template-aws/template/api) folder.
 
-In order to do this, upon starting a new watch session or building our application, we need to set the [`REACT_APP_GRAPHQL_API_URL`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/src/App.tsx#L15) environment variable and assign the URL over which the GraphQL API is actually accessible.
+In order to do this, upon starting a new watch session or building our application, we need to set the [`REACT_APP_GRAPHQL_API_URL`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/src/App.tsx#L15) environment variable and assign the URL over which the GraphQL API is actually accessible.
 
-So, we need to add the following lines into the [`code/webiny.config.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/webiny.config.ts):
+So, we need to add the following lines into the [`code/webiny.config.ts`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/webiny.config.ts):
 
 ```ts title="webiny.config.ts" {1,3,5,6,7,9,17-18,24-25}
 import invariant from "invariant";
@@ -243,7 +243,7 @@ export default {
 };
 ```
 
-As shown, within both commands, we rely on the deployed GraphQL API (`api`) and its stack output to retrieve the URL over which the GraphQL API is accessible. If needed, additional values can be retrieved too, but keep in mind that they need to be exported in the cloud infrastructure code, in [`api/pulumi/dev/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cwp-template-aws/template/api/pulumi/dev/index.ts#L127) and [`api/pulumi/prod/index.ts`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cwp-template-aws/template/api/pulumi/prod/index.ts#L133) files.
+As shown, within both commands, we rely on the deployed GraphQL API (`api`) and its stack output to retrieve the URL over which the GraphQL API is accessible. If needed, additional values can be retrieved too, but keep in mind that they need to be exported in the cloud infrastructure code, in [`api/pulumi/dev/index.ts`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cwp-template-aws/template/api/pulumi/dev/index.ts#L127) and [`api/pulumi/prod/index.ts`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cwp-template-aws/template/api/pulumi/prod/index.ts#L133) files.
 
 :::info
 The same steps would have to be followed if we wanted to link our React application with the Headless CMS GraphQL API or maybe with a new standalone GraphQL API, created with the [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api) scaffold. The only thing that would change is the folder that's being passed to the `getStackOutput` function.
@@ -273,7 +273,7 @@ You certainly can. You can also add new commands, if need be.
 
 #### How can I add new libraries to the created React application?
 
-In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. This is the reason why the [`code/package.json`](https://github.com/webiny/webiny-js/blob/cli-scaffold-react-app/packages/cli-plugin-scaffold-react-app/template/code/package.json) manifest file exists. It exists because the `code` folder represents a monorepo [workspace](https://classic.yarnpkg.com/en/docs/workspaces/).
+In case you missed it, every Webiny project is organized as a [monorepo](/docs/key-topics/project-organization/monorepo-organization), which can consist of multiple packages. This is the reason why the [`code/package.json`](https://github.com/webiny/webiny-js/blob/v5.13.0/packages/cli-plugin-scaffold-react-app/template/code/package.json) manifest file exists. It exists because the `code` folder represents a monorepo [workspace](https://classic.yarnpkg.com/en/docs/workspaces/).
 
 This is also the reason why we can't just run `yarn add xyz` from our project root. We need to specify to which yarn workspace the new library needs to be added, which can be done via the [`yarn workspace {workspace-name} add {library-name}`](https://classic.yarnpkg.com/en/docs/cli/workspace/) command.
 
