chore: add articles into the new structure

--- a/docs/how-to-guides/importing-plugins.mdx
+++ b/docs/how-to-guides/importing-plugins.mdx
@@ -23,9 +23,9 @@ Throughout our docs, and especially in the how-to guides, we often show which pl
 
 This article explains how to add plugins to:
 
-- [React applications (Admin Area and Website)](/docs/how-to-guides/development/importing-plugins#react-applications)
-- [GraphQL APIs (Main GraphQL API and Headless CMS API)](/docs/how-to-guides/development/importing-plugins#graphql-apis)
-- [Webiny CLI](/docs/how-to-guides/development/importing-plugins#webiny-cli)
+- [React applications (Admin Area and Website)](/docs/how-to-guides/importing-plugins#react-applications)
+- [GraphQL APIs (Main GraphQL API and Headless CMS API)](/docs/how-to-guides/importing-plugins#graphql-apis)
+- [Webiny CLI](/docs/how-to-guides/importing-plugins#webiny-cli)
 
 ## React Applications
 
@@ -33,8 +33,8 @@ Both **Admin Area** and **Website** React applications follow the same folder st
 
 The plugins entry files for these applications can be found at the following locations:
 
-- Admin Area -> [**apps/admin/code/src/plugins/index.ts**](https://github.com/webiny/webiny-js/blob/next/apps/admin/code/src/plugins/index.ts)
-- Website -> [**apps/website/code/src/plugins/index.ts**](https://github.com/webiny/webiny-js/blob/next/apps/website/code/src/plugins/index.ts)
+- Admin Area: [`apps/admin/code/src/plugins/index.ts`](https://github.com/webiny/webiny-js/blob/next/apps/admin/code/src/plugins/index.ts)
+- Website: [`apps/website/code/src/plugins/index.ts`](https://github.com/webiny/webiny-js/blob/next/apps/website/code/src/plugins/index.ts)
 
 To register a new plugin, you need to navigate to the appropriate plugins entry file, and add your plugin to the end of the array that is being registered into the [PluginsContainer](/docs/key-topics/plugins#plugins-container).
 
@@ -85,8 +85,8 @@ All GraphQL API Lambda function handlers present in the default Webiny project f
 
 We'll cover the two main GraphQL API Lambda function handlers: **Main GraphQL API** and **Headless CMS GraphQL API**. Their entry files can be found at the following locations:
 
-- Main GraphQL API -> [**api/code/graphql/src/index.ts**](https://github.com/webiny/webiny-js/blob/next/api/code/graphql/src/index.ts)
-- Headless CMS GraphQL API -> [**api/code/headlessCMS/src/index.ts**](https://github.com/webiny/webiny-js/blob/next/api/code/headlessCMS/src/index.ts)
+- Main GraphQL API: [`api/code/graphql/src/index.ts`](https://github.com/webiny/webiny-js/blob/next/api/code/graphql/src/index.ts)
+- Headless CMS GraphQL API: [`api/code/headlessCMS/src/index.ts`](https://github.com/webiny/webiny-js/blob/next/api/code/headlessCMS/src/index.ts)
 
 To register a new plugin, you need to add it to the end of the `plugins` array that is being passed to the `createHandler` factory function.
 
