--- a/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
+++ b/docs/how-to-guides/webiny-applications/page-builder/extend-page-settings.mdx
@@ -13,6 +13,10 @@ import passwordField from "./extend-page-settings/passwordField.png";
 import websitePassword from "./extend-page-settings/websitePassword.png";
 import listPublishedPages from "./extend-page-settings/listPublishedPages.png";
 
+:::info Can I Use This?
+This feature is available since Webiny **v5.12.0**.
+:::
+
 :::tip What you'll learn
 
 - how to hook into the page settings views
