--- a/docs/tutorials/create-custom-application/introduction.mdx
+++ b/docs/tutorials/create-custom-application/introduction.mdx
@@ -1,15 +1,75 @@
 ---
 id: introduction
-title: Create Custom Application
-sidebar_label: Create Custom Application
+title: Introduction
+sidebar_label: Introduction
 keywords: ["create", "custom", "application", "react", "graphql", "api", "scaffolding"]
 description: Learn how to create a custom full stack application, powered by React and a GraphQL API.
 ---
 
-We are currently working on this tutorial. Please be patient, we'll start publishing new articles as soon as we have them ready.
+import CenteredImage from "@components/CenteredImage";
+import preview2 from "./introduction/preview2.png";
 
-In the meantime, check out the new guides that cover recently introduced scaffolds:
+:::tip WHAT YOU’LL LEARN
 
-- [GraphQL API](/docs/how-to-guides/scaffolding/graphql-api)
-- [React Application](/docs/how-to-guides/scaffolding/react-application)
-- [Full Stack Application](/docs/how-to-guides/scaffolding/full-stack-application)
+- an overview of serverless application development
+- the goal of this tutorial
+- what are the prerequisites that need to be fulfilled in order to follow this tutorial
+
+:::
+
+:::info Can I use this?
+
+In order to follow this tutorial, you must use Webiny version **5.13.0** or greater.
+
+:::
+
+## Overview
+
+Except being the first [serverless CMS](https://www.webiny.com/serverless-cms) out there, Webiny is also categorized as a [serverless application framework](https://www.webiny.com/serverless-application-framework). In other words, it is a framework that enables developers to architect, build, and deploy solutions on top of the serverless cloud infrastructure, like [AWS Lambda](https://aws.amazon.com/lambda/), [Amazon DynamoDB](https://aws.amazon.com/dynamodb/), [Amazon S3](https://aws.amazon.com/s3/), and others.
+
+Some examples of what you can build with Webiny today are:
+
+- full-stack applications
+- websites
+- REST and GraphQL APIs
+- microservices
+- and more
+
+No matter what you end up building, it's worth pointing out that all of these different types of applications consist of two pieces: **application** and **cloud infrastructure** code.
+
+**Application code** is your frontend and backend code. For example, a [React](https://reactjs.org/) application with all of its components, hooks, providers, and so on, is code that falls into this category. On the backend side, we also have [GraphQL API](https://graphql.org/) schema definition, resolver functions, and basically any type of business, authentication, and authorization logic that might be required.
+
+**Cloud infrastructure code** defines the necessary cloud infrastructure resources that need to be deployed in order for the application to work and to be accessible by your users. It may include definitions of multiple different types of resources, like functions, databases, file storage, CDNs, and more.
+
+:::note
+We'll see both application code and cloud infrastructure code in action in the following sections of this tutorial.
+:::
+
+:::tip
+To deploy necessary cloud infrastructure, by default, Webiny relies on Pulumi, a modern infrastructure as code framework. Find out more in the following [IaC with Pulumi](/docs/key-topics/deployment/iac-with-pulumi) key topic.
+:::
+
+How do you handle these two together as a single unit? Well, that's where Webiny serverless application framework comes in. By providing the proper tools, methodology and best practices, Webiny enables seamless integration between the two, and ultimately, enables developers to build powerful applications that sit on top of the serverless cloud infrastructure.
+
+And that's what we'll be exploring in this tutorial, by building a completely custom application, from scratch. Let's see what we'll be building.
+
+## The Goal
+
+The goal of this tutorial is to learn how we can create a full stack application, using Webiny serverless application framework. More specifically, we'll be building an application that is essentially a clone of [Pinterest](https://help.pinterest.com/en/guide/all-about-pinterest), a popular website for finding ideas like recipes, home and style inspiration, and more.
+
+Of course, we'll be building a much simpler version of it. The application will allow users to sign up, create new pins (image upload included), and list pins created by themselves and other users as well. Which means we'll need to cover the following topics:
+
+- how to use the Full Stack Application scaffold in order to start building in no time
+- create the necessary user interface and GraphQL API for creating and listing pins
+- using [Amazon Cognito](https://aws.amazon.com/cognito/), enable users to sign up and later sign in
+- using [Amazon S3](https://aws.amazon.com/s3/), enable users to upload and attach an image to pins
+
+This is how the end result will look like:
+
+<CenteredImage src={preview2} alt="The Pinterest Clone Application" />
+
+## Prerequisites
+
+Except having an installed Webiny project (version `5.13.0` or greater) on top of which we can follow this tutorial, there are no special prerequisites that need to be fulfilled.
+
+In terms of previous knowledge, you should have a solid understanding of [JavaScript](https://developer.mozilla.org/en-US/docs/Web/javascript), [Node.js](https://nodejs.org/en/), and [React](https://reactjs.org/).
